gccida/c3/initialize_inlined_parameters
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:921:38: error: unknown type name 'inline_data_0'; did you mean 'inline_data'?
tree  initialize_inlined_parameters( inline_data_0 *id, tree args, tree fn) 
                                     ^~~~~~~~~~~~~
                                     inline_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:101:3: note: 'inline_data' declared here
} inline_data;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:925:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // [rsp+0h] [rbp-A0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:926:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *expr; // [rsp+10h] [rbp-90h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:927:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // [rsp+18h] [rbp-88h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:931:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *value; // [rsp+50h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:932:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *var; // [rsp+58h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:936:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *init_stmts; // [rsp+80h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:945:9: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
value = lang_hooks_0.tree_inlining.convert_parm_for_inlining( p, elements, fn); 
        ^~~~~~~~~~~~
        lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:945:61: error: called object type '<dependent type>' is not a function or function pointer
value = lang_hooks_0.tree_inlining.convert_parm_for_inlining( p, elements, fn); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:951:18: error: expected ')'
? (  struct expr = value) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:951:3: note: to match this '('
? (  struct expr = value) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:952:1: error: expected expression
: (  struct expr = decl_constant_value( value)), 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:952:18: error: expected ')'
: (  struct expr = decl_constant_value( value)), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:952:3: note: to match this '('
: (  struct expr = decl_constant_value( value)), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/tree-inline.c:952:48: error: expected expression
: (  struct expr = decl_constant_value( value)), 
                                               ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_inlined_parameters/src/obj/tree-inline.o] Error 1
